--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-use-lanyard": "^0.1.2",
     "twind": "^0.16.17"
   },
   "devDependencies": {
