--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "personal-web",
+  "name": "fresh-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@twind/next": "^1.0.9",
-    "next": "12.2.2",
+    "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-loading-skeleton": "^3.1.0",
-    "react-use-lanyard": "^0.1.2",
-    "twind": "^0.16.17"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.4",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
-    "typescript": "4.7.4"
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "typescript": "4.8.4"
   }
 }
