feat: :sparkles: add projects, repo fetching

--- a/public/projects.json
+++ b/public/projects.json
@@ -1,26 +1,1 @@
-[
-    {
-        "oss": true,
-        "name": "U-Note",
-        "description": "",
-        "url": "",
-        "stars": 0,
-        "forks": 0
-    },
-    {
-        "oss": true,
-        "name": "U-Note",
-        "description": "",
-        "url": "",
-        "stars": 0,
-        "forks": 0
-    },
-    {
-        "oss": true,
-        "name": "U-Note",
-        "description": "",
-        "url": "",
-        "stars": 0,
-        "forks": 0
-    }
-]
+["lnxcz/leap", "lnxcz/u-note", "lnxcz/fresh-web", "lnxcz/discord-sniper "]
