--- a/public/projects.json
+++ b/public/projects.json
@@ -1,1 +1,1 @@
-["lnxcz/leap", "lnxcz/u-note", "lnxcz/fresh-web", "lnxcz/discord-sniper "]
+["lnxcz/leap", "lnxcz/u-note", "lnxcz/fresh-web", "ViceVerse-cz/hackathon-frontend"]
